--- a/index.html
+++ b/index.html
@@ -2,18 +2,44 @@
 	<head>
 		<title>Stitch calc</title>
 		<script src="js.js"></script>
+		<style type="text/css">
+		.calcType {
+			margin: 15px 0;
+		}
+
+		.helper-text {
+			font-style: italic;
+			color: grey;
+		}
+		</style>
 	</head>
 	<body>
 		<div style="width:60%;margin: auto; margin-top: 200px;">
-			Number of stitches: <input type="number" id="num"><br>
-			Multiplier (optional): <input type="number" id="multi">
-			<button onclick="calc()">Go</button>
-			<br>
+			Starting stitches: <input type="number" id="num" value="10">
 
-			2ss every <input type="number" id="twoSsPer"> stitches
-			<br>
-			<button onclick="calcN()">Go</button> 
-			<br>
+			<div class="calcType">
+				I want to multiply stitches by: 
+				<input type="number" id="multi">
+				<br>
+				<span class="helper-text">
+					e.g. starting stitches * multiply by
+				</span>
+				<br>
+				<button onclick="calc()">Multiply</button>
+			</div>
+
+			<div class="calcType">
+				I want to make 
+				<input type="number" id="numIncrement" value="3">
+				stitches every <input type="number" id="incrementPer" value="5"> stitches
+				<br>
+				<span class="helper-text">
+					e.g. I want to make 2 stitches every 3 stitches means '2ss every 3 ss'
+				</span>
+				<br>
+				<button onclick="calcN()">Increment stitches</button> 
+				<br>
+			</div>
 			<p>Answer: <span id="ans"></span></p>
 			<div id="working">
 				
