--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div style="width:60%;margin: auto;">
 		<h1>Stitch Calculator</h1>
 		<p>
-			Quick little calculator useful for knitting/crochet/whatever else projects. Any requests/tweaks just contact me at <b>shirley.zhang(at)hotmail.com.au</b> (the .au is important)
+			Quick little calculator useful for knitting/crochet/whatever else projects. Any requests/tweaks just contact me at <b>din.devs@gmail.com</b>
 		</p>
 		<br>
 		<br>
